[package]
name = "cli_color_log"
version = "0.1.0"
authors = ["zhangkefei <zhkf.hunter@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A cli color tool."
repository = "https://github.com/zhangkefei/cli_color_log.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.2"