[package]
name = "cli_color_log"
version = "0.1.1"
authors = ["zhangkefei <zhkf.hunter@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A convenient color log tool for cli."
homepage = "https://github.com/zhangkefei/cli_color_log.git"
repository = "https://github.com/zhangkefei/cli_color_log.git"
documentation = "https://docs.rs/cli_color_log/0.1.1/cli_color_log/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.2"